# perf-aware-homework

./: .gitignore  Cargo.toml  README.md  analysis.txt  test.sh
8086_sim/src/: decoder.rs  main.rs
generator/: Cargo.toml
generator/src/: main.rs
haversine/: Cargo.toml  README.md
haversine/generator/: Cargo.toml
haversine/libs/: README.md
haversine/libs/performance_metrics/src/: lib.rs
haversine/libs/profiling_proc_macros/: Cargo.toml
haversine/libs/repetition_tester/src/: lib.rs
haversine/probe_page_fault_behavior/: Cargo.toml
haversine/processor/: Cargo.toml
haversine/processor/src/: main.rs
haversine/repetition_tests/: README.md  analysis.txt
haversine/repetition_tests/asm_buffer_writes/src/: write_all_bytes.asm
haversine/repetition_tests/asm_nop_loops/: Cargo.toml
haversine/repetition_tests/asm_nop_loops/src/: nop_loops.asm
haversine/repetition_tests/branch_prediction/: Cargo.toml  build.rs
haversine/repetition_tests/cache_size/: build.rs
haversine/repetition_tests/cache_size/src/: cache_tests.asm  main.rs
haversine/repetition_tests/chunked_reads/: Cargo.toml
haversine/repetition_tests/chunked_reads/src/: main.rs
haversine/repetition_tests/code_alignment/: build.rs
haversine/repetition_tests/code_alignment/src/: code_alignment.asm
haversine/repetition_tests/file_reads/src/: main.rs
haversine/repetition_tests/nontemporal_stores/: Cargo.toml  build.rs
haversine/repetition_tests/nontemporal_stores/src/: main.rs  test_routines.asm
haversine/repetition_tests/probe_read_exec_ports/src/: main.rs  reads.asm
haversine/repetition_tests/probe_write_exec_ports/: Cargo.toml  build.rs
haversine/repetition_tests/probe_write_exec_ports/src/: writes.asm
haversine/repetition_tests/read_widths/: Cargo.toml  build.rs
haversine/repetition_tests/simple_buffer_writes/: Cargo.toml
haversine/repetition_tests/simple_buffer_writes/src/: main.rs
haversine/repetition_tests/unaligned_load_penalties/: Cargo.toml  build.rs
haversine/repetition_tests/unaligned_load_penalties/src/: load_alignment_offset.asm  main.rs
libs/performance_metrics/: Cargo.toml
libs/performance_metrics/src/: lib.rs
libs/profiling_proc_macros/src/: lib.rs
libs/repetition_tester/: Cargo.toml
libs/repetition_tester/src/: lib.rs
probe_page_fault_behavior/src/: main.rs  pointer_decomposition.rs
processor/: Cargo.toml
processor/src/: json.rs  main.rs  performance_metrics.rs  profiling_proc_macros.rs
repetition_testing/: Cargo.toml  analysis.txt  build.rs
repetition_testing/asm/: write_all_bytes.asm
repetition_testing/src/: main.rs
repetition_tests/: analysis.txt
repetition_tests/asm_buffer_writes/: Cargo.toml  build.rs
repetition_tests/asm_buffer_writes/src/: main.rs  write_all_bytes.asm
repetition_tests/asm_nop_loops/: build.rs
repetition_tests/asm_nop_loops/src/: main.rs  nop_loops.asm
repetition_tests/branch_prediction/: Cargo.toml
repetition_tests/branch_prediction/src/: conditional_nop.asm  main.rs
repetition_tests/cache_size/: Cargo.toml  build.rs
repetition_tests/cache_size/src/: main.rs  read_buffer_masked.asm
repetition_tests/code_alignment/: Cargo.toml
repetition_tests/code_alignment/src/: main.rs
repetition_tests/file_reads/: Cargo.toml
repetition_tests/file_reads/src/: main.rs
repetition_tests/probe_read_exec_ports/: Cargo.toml  build.rs
repetition_tests/probe_read_exec_ports/src/: main.rs
repetition_tests/probe_write_exec_ports/src/: main.rs
repetition_tests/read_widths/src/: main.rs  read_widths.asm
src/: decoder.rs  main.rs
