[workspace]
members = ["generator", "processor", "repetition_testing"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Ryan Armstrong"]
description = "Coursework for Casey Muratori's 'Performance Aware Programming' course."

# opt-level 1 seems to vectorize loops which I don't think we want at this point
# so just use opt-level 0 for now.
[profile.dev.package.processor]
opt-level = 0
debug = true

[profile.dev.package.repetition_testing]
opt-level = 0
debug = true

[profile.dev.package.generator]
opt-level = 2
debug = true
