[workspace]
members = [
    "libs/*",
    "generator",
    "processor",
    "probe_page_fault_behavior",
    "repetition_tests/*",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Ryan Armstrong"]
description = "Coursework for Casey Muratori's 'Performance Aware Programming' course."

# opt-level 1 seems to vectorize loops which I don't think we want at this point
# so just use opt-level 0 for now.
[profile.dev.package.processor]
opt-level = 0
debug = true

[profile.dev.package.generator]
opt-level = 2
debug = true

# REPETITION TEST PROFILES
[profile.dev.package.reptest_file_reads]
opt-level = "z"
debug = true

[profile.release.package.reptest_file_reads]
opt-level = "z"
debug = true

[profile.dev.package.reptest_simple_buffer_writes]
opt-level = "z"
debug = true

[profile.release.package.reptest_simple_buffer_writes]
opt-level = "z"
debug = true

[profile.dev.package.reptest_asm_buffer_writes]
opt-level = "z"
debug = true

[profile.release.package.reptest_asm_buffer_writes]
opt-level = "z"
debug = true

[profile.dev.package.reptest_asm_nop_loops]
opt-level = "z"
debug = true

[profile.release.package.reptest_asm_nop_loops]
opt-level = "z"
debug = true
