[workspace]
members = [
    "libs/*",
    "generator",
    "processor",
    "probe_page_fault_behavior",
    "repetition_tests/*",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Ryan Armstrong"]
description = "Coursework for Casey Muratori's 'Performance Aware Programming' course."

[profile.dev.package.processor]
opt-level = 0
debug = true

[profile.dev.package.generator]
opt-level = 2
debug = true

# Profile for Repetition Tests
[profile.reptest]
inherits = "dev"
opt-level = "z"
debug = true
