[workspace]
members = [
    "libs/*",
    "generator",
    "processor",
    "probe_page_fault_behavior",
    "repetition_tests/*",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Ryan Armstrong"]
description = "Coursework for Casey Muratori's 'Performance Aware Programming' course."

# Profile for Repetition Tests
# TODO rename to perftest and update README documentation
[profile.reptest]
inherits = "dev"
opt-level = "z"
debug = true
