[package]
name = "processor"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[features]
profiling = []

[lib]
proc-macro = true
name = "profiling_proc_macros"
path = "src/profiling_proc_macros.rs"

[dependencies]
winapi = { version = "0.3.9", features = ["profileapi"] }
