[package]
name = "reptest_file_reads"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
repetition_tester = { path = "../../libs/repetition_tester" }
libc = "0.2.155"
winapi = { version = "0.3.9", features = ["errhandlingapi", "fileapi", "handleapi"] }
