[package]
name = "reptest_branch_prediction"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
repetition_tester = { path = "../../libs/repetition_tester" }
winapi = { version = "0.3.9", features = ["bcrypt"] }
