[package]
name = "reptest_unaligned_load_penalties"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
const_format = "0.2.33"
repetition_tester = { path = "../../libs/repetition_tester" }
winapi = { version = "0.3.9", features = ["memoryapi"] }
